# MCP-Fortigate

./: .gitignore  README.md  fortigate.config.example.json  pyproject.toml  requirements.txt  server.py
fortigate_mcp/: __init__.py  __main__.py
